Add ability to configure KakaoTalk open chat link in admin settings
Implements a new feature allowing administrators to set and manage the KakaoTalk open chat link through the admin settings page. This link is then dynamically used for the KakaoTalk consultation button on the home page.
