# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./applications";
 export * from "./telegram_settings";
+export * from "./site_settings";
